v0.16
    * FIX : crash when coming from "Separate move mode" and a feature is selected.
    * CHG : Move the "File-Render" menu to "File-Export-Raster/SVG"
v0.15
    * FIX : In about box, the changelog is now properly resized
    * ADD : support for OSM short link as input
    * ADD : Show distance measurement during area creation (closes #1640)
    * ADD : Add language to changeset created_by (closes #2369)
    * FIX : Add support for HTTP auth to TMS (by Trav) (closes #2473)
    * FIX : Crash in tag selection with invalid "not" expression (fixes #2722)
    * FIX : Joining 2 ways to create an area doesn't create a polygon if the 2 ways have opposite directions (fixes #2718)
    * FIX : Improve tag completion behaviour (by Trav) (closes #2716)
    * ADD : Add GlobeXplorer (DigitalGlobe) to default WMS list (by sim6) (closes #2714)
    * FIX : Handle case of selection being reset during tag editing (fixes #2646)
    * ADD : Make the point where nodes are not displayed configurable
    * FIX : Do not allow node interaction when they are not displayed (closes #2674)
    * FIX : 100% CPU usage and Crash on creating roundabout (fixes #2659)
    * FIX : No name in for gpx track layer in Layers menu after File -> Import. Patch by Trav (closes #2661)
    * CHG : Keep directional arrows blue for oneway roads in "Show directional arrows - Always" mode.
    * ADD : GeoTIFF background plugin (closes #1025)
    * ADD : Grabbing hand icon in signle mouse mode
    * FIX : Layers menu entry for background layer is wrong at startup. Patch by Trav (closes #2641)
    * ADD : When in "single mouse button" mode, allow to cancel most operation with a right-click
    * ADD : "Zoom lock" mode. Zoom steps are locked to TMS ones and projection is locked to Mercator
    * FIX : get sharper Yahoo images (closes #2623)
    * FIX : tag value "Fast food" should be "fast_food" (closes #2625)
    * ADD : Add a preference disallowing selection of relations when hidden